# ImageProcessingLibrary

./: CMakeLists.txt  README.md  test_image.pgm
doc/: ICP3038-assignment-01.tex
doc/html/: _image_8h.html  _image_8h_source.html  annotated.html  class_image-members.html  class_image.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  index.html  pages.html  todo.html
doc/html/search/: searchdata.js
include/: Image.h
src/: Image.cpp  test.cpp
